--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
         </section>
         <section class="main_thirdsection">
             <h2 class="main_thirdtitle">Чим ми займаємося</h2>
-            <img src="firstpicture.png" alt="first image">
-            <img src="secondpicture.png" alt="second image">
-            <img src="thirdpicture.png" alt="third image">
+            <img src="imgs/firstpicture.png" alt="first image">
+            <img src="imgs/secondpicture.png" alt="second image">
+            <img src="imgs/thirdpicture.png" alt="third image">
         </section>
         <section class="main_fourthsection">
             <h2 class="main_thirdtitle">Наша команда</h2>
-            <img src="firstworker.png" alt="Product designer" height="260" width="270">
+            <img src="imgs/firstworker.png" alt="Product designer" height="260" width="270">
             <h4 class="main_fourthtitle">Ігор Дем'яненко</h4>
             <p class="main_secondtext">Product Designer</p>
-            <img src="secondworker.png" alt="Frontend developer" height="260" width="270">
+            <img src="imgs/secondworker.png" alt="Frontend developer" height="260" width="270">
             <h4 class="main_fourthtitle">Ольга Рєпіна</h4>
             <p class="main_secondtext">Frontend Developer</p>
-            <img src="thirdworker.png" alt="marketing" height="260" width="270">
-            <h4 class="main_fourthtitle">Микола Тарасов</h4>
+            <img src="imgs/thirdworker.png" alt="marketing" height="260" width="270">
+            <h4 class="imgs/main_fourthtitle">Микола Тарасов</h4>
             <p class="main_secondtext">Marketing</p>
-            <img src="fourthworker.png" alt="UI designer" height="260" width="270">
+            <img src="imgs/fourthworker.png" alt="UI designer" height="260" width="270">
             <h4 class="main_fourthtitle">Михайло Єрмаков</h4>
             <p class="main_secondtext">UI Designer</p>
 
