--- a/portfolio.html
+++ b/portfolio.html
@@ -30,31 +30,31 @@
        <button class="main_secondbutton">Дизайн</button>
        <button class="main_secondbutton">Маркетинг</button>
        <section class="main_thirdsection">
-       <img src="firstimg.png" alt="first website" >
+       <img src="imgs/firstimg.png" alt="first website" >
        <h4 class="main_fifthtitle">Технокряк</h4>
        <p>Веб-сайт</p>
-       <img src="secondimg.png" alt="first design">
+       <img src="imgs/secondimg.png" alt="first design">
        <h4 class="main_fifthtitle">Постер New Orlean vs Golden Star</h4>
        <p class="main_thirdtext">Дизайн</p>
-       <img src="thirdimg.png" alt="first app">
+       <img src="imgs/thirdimg.png" alt="first app">
        <h4 class="main_fifthtitle">Ресторан Seafood</h4>
        <p class="main_thirdtext">Додаток</p>
-       <img src="fourthimg.png" alt="first marketing">
+       <img src="imgs/fourthimg.png" alt="first marketing">
        <h4 class="main_fifthtitle">Проєкт Prime</h4>
        <p class="main_thirdtext">Маркетинг</p>
-       <img src="fifthimg.png" alt="second app">
+       <img src="imgs/fifthimg.png" alt="second app">
        <h4 class="main_fifthtitle">Проєкт Boxes</h4>
        <p class="main_thirdtext">Додаток</p>
-       <img src="sixthimg.png" alt="second website">
+       <img src="imgs/sixthimg.png" alt="second website">
        <h4 class="main_fifthtitle">Inspiration has no Borders</h4>
        <p class="main_thirdtext">Веб-сайт</p>
-       <img src="seventhimg.png" alt="second design">
+       <img src="imgs/seventhimg.png" alt="second design">
        <h4 class="main_fifthtitle">Видання Limited Edition</h4>
        <p class="main_thirdtext">Дизайн</p>
-       <img src="eighthimg.png" alt="second marketing">
+       <img src="imgs/eighthimg.png" alt="second marketing">
        <h4 class="main_fifthtitle">Проєкт LAB</h4>
        <p class="main_thirdtext">Маркетинг</p>
-       <img src="ninthimg.png" alt="third app">
+       <img src="imgs/ninthimg.png" alt="third app">
        <h4 class="main_fifthtitle">Growing Business</h4>
        <p class="main_thirdtext">Додаток</p>
     </section>
